react-rust-postgres/k8s/kustomize/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: app-frontend
          image: frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
