react-rust-postgres/k8s/kustomize/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 80
      protocol: TCP
